--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -1,6 +1,6 @@
 ---
 title: 'Hello Hanover Spring (2018)'
-date: 2018-06-01
+date: 2018-06-03
 permalink: /posts/2018/6/blog-post-4/
 tags:
   - dartmouth
@@ -14,7 +14,7 @@ tags:
   - tennis
 ---
 
-This spring quarter, I worked at Oracle (previously Dyn) in Hanover. I spent a lot of time on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
+This spring quarter, I interned at Oracle (previously Dyn) in Hanover. I spent a lot of time on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
 
 Oracle
 ------
@@ -25,34 +25,25 @@ I had a couple of observations from working at Oracle. The first is that my prog
 Activities
 ------
 
-**Protago Labs**
+**Protago Labs:** I continued working part-time for [Protago Labs](http://protagolab.com/), a small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
 
-I continued working part-time for [Protago Labs](http://protagolab.com/), a small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
-
-**Research**
-
-Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the organizer of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
+**Research:** Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the organizer of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
 When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more difficult to find doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, it was at times challenging that my research timeline was so dependent on waiting for our pathologists to label our data.
 
 <img src='/images/lung_graphic_small.jpg' width="99%">
+Whole slide lung images. 
 
-**Fencing**
+**Fencing:** For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
 
-For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
+**Teaching Assistant:** I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. I hope that the administration makes a bigger effort to hire faculty in deep learning, since Dartmouth is considered by many to be the "[birthplace of AI](https://en.wikipedia.org/wiki/Dartmouth_workshop)."
 
-**TA**
-
-I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. I hope that the administration makes a bigger effort to hire faculty in deep learning, since Dartmouth is considered by many to be the "[birthplace of AI](https://en.wikipedia.org/wiki/Dartmouth_workshop)."
-
-**Tennis**
-
-Spring in Hanover is absolutely beautiful, and I made it a priority to play tennis at least once every week. After not playing since last summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
+**Tennis:** Spring in Hanover is absolutely beautiful, and I made it a priority to play tennis at least once every week. After not playing since last summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
 Take a picture of the tennis court on a nice day
 
 <img src='/images/2.png' width="49%">
-
+Left, Dartmouth men's epee: me, Frank, Christian, Raph. 
 
 Personal
 ------
@@ -61,10 +52,12 @@ Personal
 
 I lived off campus in Hartford, VT (about ten minutes by car from campus) in a house with three medical school students and their two cats. It was far better than school housing. My room was big, there was free parking and laundry, and the house had a full kitchen. Meredith, Sylvia, and Allie, thanks for being great housemates!
 
-My grandparents, who live in the suburbs of Boston, graciously let me borrow their car for the term since they don't use it much. I enjoyed driving instead of walking and I think that I will probably prefer to live somewhere suburban when I'm older, instead of a big city.  
+My grandparents, who live in the suburbs of Boston, graciously let me borrow their car for the term since they don't use it much. I enjoyed driving instead of walking and I think that I will probably prefer to live somewhere suburban when I'm older, instead of a big city.
 
-<img src='/images/IMG_0802.jpg' width="49%">
-<img src='/images/IMG_1887.jpg' width="49%">
+<img src='/images/IMG_0802.jpg' width="32%">
+<img src='/images/IMG_1887.jpg' width="32%">
+<img src='/images/IMG_1887.jpg' width="32%">
+Left and middle, my room; right, my pillow pet Frank and our cat Penny. 
 
 **Food**
 
@@ -83,13 +76,14 @@ I came up with a super nerdy scoring system to help me decide what food to buy. 
 
 <img src='/images/IMG_2515.jpg' width="49%">
 <img src='/images/IMG_6269.jpg' width="49%">
+Left, my turkey sandwich; right, every single dish I am capable of cooking on one table.
 
 **Books**
 
-I read *Mountains Beyond Mountains* by Tracy Kidder, a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in *When Breath Becomes Air* by Paul Kalanithi (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't even reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from his story are how much impact a single hardworking individual can have on the world.
+I read [*Mountains Beyond Mountains* by Tracy Kidder](https://www.amazon.com/Mountains-Beyond-Healing-World-Farmer/dp/0375506160/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=), a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in [*When Breath Becomes Air* by Paul Kalanithi](https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X) (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't even reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from his story are how much impact a single hardworking individual can have on the world.
 
 Closing
 ------
-Some weeks were quite busy, especially when work for Oracle, research, and Protago Labs were heavy at the same time. I'm going to Australia and New Zealand from 06/08 to 06/19 with my friend June for the spring-summer interim, and I'm excited for the supposedly glorious sophomore summer term in Hanover!
+Some weeks were quite busy, especially when work for Oracle, research, and Protago Labs were heavy at the same time. I'm going to Australia and New Zealand next week with my friend June for the spring-summer interim, and I'm excited for the supposedly glorious sophomore summer term in Hanover!
 
 
