--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -18,7 +18,7 @@ This spring quarter, I interned at Oracle (previously Dyn) in Hanover. I spent a
 
 Oracle
 ------
-Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict geolocations of IP addresses and domain names. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language). My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
+Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict geolocations of IP addresses and domain names. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language). My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, who were relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for over a decade.
 
 I had a couple of observations from working at Oracle. The first is that my progress on our project was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. It closely followed the '80-20 rule,' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. Our project wanted AI to predict things that typical humans could not, so (1) we did not know if it was even feasible, (2) we could not gather more data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. Despite these challenges, I was quite happy with our final product, a model that was able to predict IP geolocations with approximately human-level performance.
 
@@ -32,9 +32,9 @@ Activities
 When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more difficult to find doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, it was at times challenging that my research timeline was so dependent on waiting for our pathologists to label our data.
 
 <img src='/images/lung_graphic_small.jpg' width="99%">
-Whole slide lung images. 
+Whole slide lung images. Ask me about them.
 
-**Fencing:** For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
+**Fencing:** For fencing this term, we had our most important event of the year, club nationals. We were the [first place](http://www.thedartmouth.com/article/2018/04/dartmouth-fencing-club) six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" I'm proud to say that I'm the worst fencer on our nationals men's Epee squad.
 
 **Teaching Assistant:** I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) with V.S. Subrahmanian. My duties consisted of holding office hours and grading homework assignments and tests. I'm excited that so many people who came to my office hours asked me about deep learning in addition to machine learning. I hope that the administration makes a bigger effort to hire faculty in deep learning, since Dartmouth is considered by many to be the "[birthplace of AI](https://en.wikipedia.org/wiki/Dartmouth_workshop)."
 
@@ -57,7 +57,7 @@ My grandparents, who live in the suburbs of Boston, graciously let me borrow the
 <img src='/images/IMG_0802.jpg' width="32%">
 <img src='/images/IMG_1887.jpg' width="32%">
 <img src='/images/IMG_8240.jpg' width="32%">
-Left and middle, my room; right, my pillow pet Frank and our cat Penny. 
+Left & middle, my room; right, my pillow pet Frank and our cat Penny. 
 
 **Food**
 
@@ -78,9 +78,9 @@ I came up with a super nerdy scoring system to help me decide what food to buy. 
 <img src='/images/IMG_6269.jpg' width="49%">
 Left, my turkey sandwich; right, every single dish I am capable of cooking on one table.
 
-**Books**
+**Reading**
 
-I read [*Mountains Beyond Mountains* by Tracy Kidder](https://www.amazon.com/Mountains-Beyond-Healing-World-Farmer/dp/0375506160/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=), a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in [*When Breath Becomes Air* by Paul Kalanithi](https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X) (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't even reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from his story are how much impact a single hardworking individual can have on the world.
+I read [*Mountains Beyond Mountains* by Tracy Kidder](https://www.amazon.com/Mountains-Beyond-Healing-World-Farmer/dp/0375506160/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=), a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in [*When Breath Becomes Air* by Paul Kalanithi](https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X) (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't even reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from this book is how much impact a single hardworking individual can have on the world.
 
 Closing
 ------
