--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -56,7 +56,7 @@ My grandparents, who live in the suburbs of Boston, graciously let me borrow the
 
 <img src='/images/IMG_0802.jpg' width="32%">
 <img src='/images/IMG_1887.jpg' width="32%">
-<img src='/images/IMG_8240.jpg' width="32%">
+<img src='/images/IMG_8240.JPG' width="32%">
 Left & middle, my room; right, my pillow pet Frank and our cat Penny. 
 
 **Food**
