--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -14,7 +14,7 @@ tags:
   - tennis
 ---
 
-This spring quarter, I interned at Oracle (previously Dyn) in Hanover. I spent a lot of time on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
+This spring quarter, I interned at Oracle (previously Dyn) in Hanover. I worked on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
 
 Oracle
 ------
