--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -14,7 +14,7 @@ tags:
   - tennis
 ---
 
-This spring quarter, I interned at Oracle (previously Dyn) in Hanover. I worked on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
+This spring quarter, I interned at Oracle (previously Dyn) in Hanover. I had ample time to work on machine learning projects both at Oracle and for my research since I was not enrolled in classes, and I'm grateful to have been close enough to campus that I could spend time with friends and work as a teaching assistant for a machine learning class.
 
 Oracle
 ------
@@ -80,7 +80,7 @@ Left, my turkey sandwich; right, every single dish I am capable of cooking on on
 
 **Reading**
 
-I read [*Mountains Beyond Mountains* by Tracy Kidder](https://www.amazon.com/Mountains-Beyond-Healing-World-Farmer/dp/0375506160/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=), a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in [*When Breath Becomes Air* by Paul Kalanithi](https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X) (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't even reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from this book is how much impact a single hardworking individual can have on the world.
+I read [*Mountains Beyond Mountains* by Tracy Kidder](https://www.amazon.com/Mountains-Beyond-Healing-World-Farmer/dp/0375506160/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=), a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in [*When Breath Becomes Air* by Paul Kalanithi](https://www.amazon.com/When-Breath-Becomes-Paul-Kalanithi/dp/081298840X) (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't ever reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from this book is how much impact a single hardworking individual can have on the world.
 
 Closing
 ------
