try to make blog post wor

--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -1,7 +1,7 @@
 ---
-title: 'Gidday mate'
-date: 2018-06-17
-permalink: /posts/2018/6/blog-post-5/
+title: 'Gidday Mate'
+date: 2018-06-18
+permalink: /posts/2018/7/blog-post-5/
 tags:
   - australia
   - new zealand
