--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -1,7 +1,7 @@
 ---
 title: 'Gidday Mate'
-date: 2018-06-18
-permalink: /posts/2018/7/blog-post-5/
+date: 2018-06-17
+permalink: /posts/2018/6/blog-post-5/
 tags:
   - australia
   - new zealand
@@ -11,6 +11,11 @@ tags:
   - rotorua
   - great ocean road
   - polynesian spa
+  - mount victoria
+  - mr wongs
+  - baxter inn
+  - chinese garden of friendship
+  - 12 apostles
 ---
 
 For the spring-summer interim break, my friend June and I went on vacation in Australia and New Zealand. It was the first time I had planned a trip on my own, and it was a great experience.
@@ -24,9 +29,10 @@ Sydney
 
 **Baxter's Inn:** Later in the evening, we went to Baxter's Inn, apparently rated the 12th best bar in the world. It was in a dark, hard to find alley downtown. There was just a bouncer standing in the corner, who checked our IDs and showed us down an unmarked staircase. The door didn't even have a sign, and it was like entering a fraternity basement, but I suppose that was part of what made it so special. Walking in felt like going into a speakeasy from the 1920s. We ordered drinks at the bar, where the bartender told us he could make literally anything. The service and drinks were great, and I tried absinthe for the first time. Baxter Inn's atmosphere was so intentional yet natural. 
 
-<img src='/images/opera_1.jpg' width="32%">
-<video src="/images/sydney.mp4" width="42%" autoplay loop></video>
-<img src='/images/opera_2.jpg' width="24%">
+<img src='/images/opera_2.jpg' width="23%">
+<img src='/images/opera_1.jpg' width="29%">
+<img src='/images/chinese_garden.jpg' width="23%">
+<img src='/images/graffiti.jpg' width="23%">
 The Sydney Opera House.
 
 Melbourne & Great Ocean Road
@@ -36,10 +42,11 @@ Melbourne & Great Ocean Road
 
 **Great Ocean Road:** Taking a bus down the Great Ocean Road of southern Australia was so scenic. The roads were windy and right on the shoreline, though the lanes were really narrow and I was scared that if the driver went two feet off the road we would fall off a cliff and into the ocean. We saw the twelve apostles, which I thought would be similar to rocks at the black sand beach in iceland, but it was much larger. I probably could have spent a whole day looking at the rock formations and listening to the waves, but unforunately our stop was only an hour. 
 
-<img src='/images/melbourne.jpg' width="20%">
-<video src="/images/apostles.mp4" width="50%" autoplay loop></video>
-<img src='/images/apostles.jpg' width="28%">
+<img src='/images/melbourne.jpg' width="19%">
+<img src='/images/apostles_2.jpg' width="45%">
+<img src='/images/apostles.jpg' width="33.8%">
 An alley in Melbourne, left; the Twelve Apostles, middle and right.
+3.86
 
 Auckland
 ------
@@ -48,15 +55,14 @@ Auckland
 
 **Mount Victoria:** At sunset, we took the ferry to Devonport and climbed up Mount Victoria (it was just a ten minute walk up a hill don't be too impressed). The view was amazing though, with a mixture of the city skyline, ships in the bay, and the Rangitoto Volcano on the other side. This was my favorite view in the entire trip.
 
-<img src='/images/mount_victoria_1.jpg' width="35%">
-<img src='/images/mount_victoria_2.jpg' width="23%">
-<video src="/images/mount_vic_video.mp4" width="40%" autoplay loop></video>
+<img src='/images/mount_victoria_1.jpg' width="59%">
+<img src='/images/mount_victoria_2.jpg' width="39.3%">
 Views from Mount Victoria. You can see the sky tower in the background. 
 
 Rotorua
 ------
 
-**Polynesian Spa:** Since going in the geothermal pools in Iceland, I have loved spas. Polynesian Spa is apparently one of the top ten spas in the world, and we spent an entire day there. The natural waters were great, and even better was the view onto the Lake Rotorura (?). I wish I lived near a scenic spa. 
+**Polynesian Spa:** Since going in the geothermal pools in Iceland, I have loved spas. Polynesian Spa is apparently one of the top ten spas in the world, and we spent an entire day there. The natural waters were great, and even better was the view onto the Lake Rotorura. I wish I lived near a spa. 
 
 **Wai-o-tapu:** Our second day in Rotorua, we visited Wai-o-tapu, a geothermal area known for its Champagne pool. It was a pretty unique area surrounded by the lush mountains of New Zealand, but I do have to say that the colors in pictures I saw online are much more saturated than the actual pool itself. We also took a short stop at Kuirau Park, which was only a couple of minutes from our airbnb. With the steam, wooden walkways, and branches sticking out of the water, it literally looked like hell. 
 
@@ -68,7 +74,7 @@ Polynesian Spa, left; Wai-o-tapu, middle; Kuirau Park, right.
 Closing
 ------
 
-Overall, the trip was fun and it felt crazy that I was so far from home. We had some setbacks (two of our flights got canceled, and two delayed), so my lesson learned is that it's probably a good idea to buy flight insurance, especially if the flight has many layovers with different airlines. The other thing is that I should bring an extra phone with me when traveling, since it turns out my iphone was not unlocked and then the new phone that I bought stopped reading the sim card after a day. 
+Overall, the trip was fun and the whole time it felt crazy that I was so far from home. We had some setbacks (two of our flights got canceled, and two delayed), so my lesson learned is that it's probably a good idea to buy flight insurance, especially if the flight has many layovers with different airlines. The other thing is that I should bring an extra phone with me when traveling, since it turns out my iphone was not unlocked and then the new phone that I bought stopped reading the sim card after a day. 
 
 It was a lot of money for all the plane tickets and experiences. My friend Emma thinks I'm super cheap, and I do try to be frugal at home, but I ended up spending way more money than expected. Here's the spread: 
 
@@ -83,6 +89,9 @@ Total:
 
 What a journey. 
 
-
+<video src="/images/sydney.mp4" width="32.5%" autoplay loop></video>
+<video src="/images/apostles.mp4" width="32.5%" autoplay loop></video>
+<video src="/images/mount_vic_video.mp4" width="32.5%" autoplay loop></video>
+Sydney, left; 12 apostles, middle; view from Mount Victoria, right.
 
 
