update aus blog

--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -29,10 +29,10 @@ Sydney
 
 **Baxter's Inn:** Later in the evening, we went to Baxter's Inn, apparently rated the 12th best bar in the world. It was in a dark, hard to find alley downtown. There was just a bouncer standing in the corner, who checked our IDs and showed us down an unmarked staircase. The door didn't even have a sign, and it was like entering a fraternity basement, but I suppose that was part of what made it so special. Walking in felt like going into a speakeasy from the 1920s. We ordered drinks at the bar, where the bartender told us he could make literally anything. The service and drinks were great, and I tried absinthe for the first time. Baxter Inn's atmosphere was so intentional yet natural. 
 
-<img src='/images/opera_2.jpg' width="23%">
+<img src='/images/opera_2.jpg' width="22%">
 <img src='/images/opera_1.jpg' width="29%">
-<img src='/images/chinese_garden.jpg' width="23%">
-<img src='/images/graffiti.jpg' width="23%">
+<img src='/images/chinese_garden.jpg' width="22%">
+<img src='/images/graffiti.jpg' width="22%">
 The Sydney Opera House.
 
 Melbourne & Great Ocean Road
@@ -42,11 +42,10 @@ Melbourne & Great Ocean Road
 
 **Great Ocean Road:** Taking a bus down the Great Ocean Road of southern Australia was so scenic. The roads were windy and right on the shoreline, though the lanes were really narrow and I was scared that if the driver went two feet off the road we would fall off a cliff and into the ocean. We saw the twelve apostles, which I thought would be similar to rocks at the black sand beach in iceland, but it was much larger. I probably could have spent a whole day looking at the rock formations and listening to the waves, but unforunately our stop was only an hour. 
 
-<img src='/images/melbourne.jpg' width="19%">
+<img src='/images/melbourne.jpg' width="18%">
 <img src='/images/apostles_2.jpg' width="45%">
-<img src='/images/apostles.jpg' width="33.8%">
+<img src='/images/apostles.jpg' width="33.5%">
 An alley in Melbourne, left; the Twelve Apostles, middle and right.
-3.86
 
 Auckland
 ------
@@ -55,8 +54,8 @@ Auckland
 
 **Mount Victoria:** At sunset, we took the ferry to Devonport and climbed up Mount Victoria (it was just a ten minute walk up a hill don't be too impressed). The view was amazing though, with a mixture of the city skyline, ships in the bay, and the Rangitoto Volcano on the other side. This was my favorite view in the entire trip.
 
-<img src='/images/mount_victoria_1.jpg' width="59%">
 <img src='/images/mount_victoria_2.jpg' width="39.3%">
+<img src='/images/mount_victoria_1.jpg' width="59%">
 Views from Mount Victoria. You can see the sky tower in the background. 
 
 Rotorua
@@ -78,20 +77,29 @@ Overall, the trip was fun and the whole time it felt crazy that I was so far fro
 
 It was a lot of money for all the plane tickets and experiences. My friend Emma thinks I'm super cheap, and I do try to be frugal at home, but I ended up spending way more money than expected. Here's the spread: 
 
-Flights: 2285
-Airbnbs/hotels: 247
-Uber/taxis/train:
-Food:
-Sky jump: 
-Other Experiences:
-Phone+sim: 142
-Total:
+<center>
+|  Expens       | Cost          | Could have saved?  |
+| ------------- |:---------------:|:------:|
+| 5 Flights     | $2230 | Probably |
+| Airbnb      | $247      |   No |
+| Uber/Taxi/Train | $175      |    No |
+| Food | $297 | Definitely |
+| Sky Jump | $136 | No |
+| Great Ocean Road Tour | $132 | No | 
+| Other Entrance Fees | $88 | No | 
+| Foreign Transaction Fees | $20 | Yes | 
+| ETA | $16 | No | 
+| Total | 3341 | Yes | 
+</center>
 
 What a journey. 
 
-<video src="/images/sydney.mp4" width="32.5%" autoplay loop></video>
-<video src="/images/apostles.mp4" width="32.5%" autoplay loop></video>
-<video src="/images/mount_vic_video.mp4" width="32.5%" autoplay loop></video>
+<video src="/images/mount_vic_video.mp4" width="50%" autoplay loop></video>
 Sydney, left; 12 apostles, middle; view from Mount Victoria, right.
 
 
+
+
+
+<video src="/images/sydney.mp4" width="32.5%" autoplay loop></video>
+<video src="/images/apostles.mp4" width="32.5%" autoplay loop></video>
