does table work

--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -78,6 +78,65 @@ Overall, the trip was fun and the whole time it felt crazy that I was so far fro
 It was a lot of money for all the plane tickets and experiences. My friend Emma thinks I'm super cheap, and I do try to be frugal at home, but I ended up spending way more money than expected. Here's the spread: 
 
 <center>
+
+<table style="width:100%">
+  <tr>
+    <th>Expense</th>
+    <th>Cost</th> 
+    <th>Could have saved?</th>
+  </tr>
+  <tr>
+    <td>5 Flights</td>
+    <td>$2230</td> 
+    <td>Probably</td>
+  </tr>
+  <tr>
+    <td>Airbnb</td>
+    <td>$247</td> 
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Uber/Taxi/Train</td>
+    <td>$175</td> 
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Food</td>
+    <td>$297</td> 
+    <td>Definitely</td>
+  </tr>
+  <tr>
+    <td>Sky Jump</td>
+    <td>$136</td> 
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Great Ocean Road Tour</td>
+    <td>$132</td> 
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Other Entrance Fees</td>
+    <td>$88</td> 
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Foreign Transaction Fees</td>
+    <td>$20</td> 
+    <td>Yes</td>
+  </tr>
+  <tr>
+    <td>ETA</td>
+    <td>$16</td> 
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Total</td>
+    <td>$3341</td> 
+    <td>Yes</td>
+  </tr>
+</table>
+
 |  Expens       | Cost          | Could have saved?  |
 | ------------- |:---------------:|:------:|
 | 5 Flights     | $2230 | Probably |
