--- a/drafts/2018-08-25-blog-post-6.md
+++ b/drafts/2018-08-25-blog-post-6.md
@@ -13,10 +13,7 @@ tags:
 Reading
 ------
 
-I read Stephen King's Misery. 
-
-This was my first Stephen King book, and I will admit that King is an incredible storyteller. I had always thought that good writing meant allowing the reader to focus on the content, but while reading this book, I stopped at many points, noticing how good King's writing was. His use of metaphors was so natural, his word choice was so intentional, and his control of language so masterful. Though the plot did not have as much action as I expected and it was more tame than I expected, the book felt crafted so carefully from beginning to end.
-Apparently in good writers never use adverbs since they can always find the perfect verbs, and Stephen King proves this.
+I read Stephen King's *Misery*, which is about a famous novelist kept hostage by a crazy fan and forced to write a new book. I will admit that King is an incredible storyteller. I always thought that good writing meant clarity to allow the reader to focus on content, but when reading this book, I stopped more than once to note how good King's writing was. His use of metaphors was natural, his word choice so deliberate, and his control of language was masterful. Though the book was actually quite tame and I would have liked more action, the plot was engaging because each piece was intentionally crafted from beginning to end. King says to never use adverbs since there is always a perfect verbs, and I just broke that rule in the previous sentence.
 
 
 <img src='/images/poly_spa.jpg' width="32%">
