--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -79,77 +79,64 @@ It was a lot of money for all the plane tickets and experiences. My friend Emma 
 
 <center>
 
-<table style="width:100%">
+<table style="width:75%" >
   <tr>
     <th>Expense</th>
-    <th>Cost</th> 
-    <th>Could have saved?</th>
+    <td align="center">Cost</th> 
+    <td align="center">Could have saved?</th>
   </tr>
   <tr>
     <td>5 Flights</td>
-    <td>$2230</td> 
-    <td>Probably</td>
+    <td align="center">$2230</td> 
+    <td align="center">Probably</td>
   </tr>
   <tr>
     <td>Airbnb</td>
-    <td>$247</td> 
-    <td>No</td>
+    <td align="center">$247</td> 
+    <td align="center">No</td>
   </tr>
   <tr>
     <td>Uber/Taxi/Train</td>
-    <td>$175</td> 
-    <td>No</td>
+    <td align="center">$175</td> 
+    <td align="center">No</td>
   </tr>
   <tr>
     <td>Food</td>
-    <td>$297</td> 
-    <td>Definitely</td>
+    <td align="center">$297</td> 
+    <td align="center">Definitely</td>
   </tr>
   <tr>
     <td>Sky Jump</td>
-    <td>$136</td> 
-    <td>No</td>
+    <td align="center">$136</td> 
+    <td align="center">No</td>
   </tr>
   <tr>
     <td>Great Ocean Road Tour</td>
-    <td>$132</td> 
-    <td>No</td>
+    <td align="center">$132</td> 
+    <td align="center">No</td>
   </tr>
   <tr>
     <td>Other Entrance Fees</td>
-    <td>$88</td> 
-    <td>No</td>
+    <td align="center">$88</td> 
+    <td align="center">No</td>
   </tr>
   <tr>
     <td>Foreign Transaction Fees</td>
-    <td>$20</td> 
-    <td>Yes</td>
+    <td align="center">$20</td> 
+    <td align="center">Yes</td>
   </tr>
   <tr>
     <td>ETA</td>
-    <td>$16</td> 
-    <td>No</td>
+    <td align="center">$16</td> 
+    <td align="center">No</td>
   </tr>
   <tr>
     <td>Total</td>
-    <td>$3341</td> 
-    <td>Yes</td>
+    <td align="center">$3341</td> 
+    <td align="center">Yes</td>
   </tr>
 </table>
 
-|  Expens       | Cost          | Could have saved?  |
-| ------------- |:---------------:|:------:|
-| 5 Flights     | $2230 | Probably |
-| Airbnb      | $247      |   No |
-| Uber/Taxi/Train | $175      |    No |
-| Food | $297 | Definitely |
-| Sky Jump | $136 | No |
-| Great Ocean Road Tour | $132 | No | 
-| Other Entrance Fees | $88 | No | 
-| Foreign Transaction Fees | $20 | Yes | 
-| ETA | $16 | No | 
-| Total | 3341 | Yes | 
-</center>
 
 What a journey. 
 
