--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -79,11 +79,11 @@ It was a lot of money for all the plane tickets and experiences. My friend Emma 
 
 <center>
 
-<table style="width:75%" >
+<table style="width:70%" >
   <tr>
     <th>Expense</th>
-    <td align="center">Cost</th> 
-    <td align="center">Could have saved?</th>
+    <th align="center">Cost</th> 
+    <th align="center">Could have saved?</th>
   </tr>
   <tr>
     <td>5 Flights</td>
@@ -136,8 +136,9 @@ It was a lot of money for all the plane tickets and experiences. My friend Emma 
     <td align="center">Yes</td>
   </tr>
 </table>
+</center>
 
-What a journey. 
+Video footage of the trip can be found here. What a journey. 
 
 <video src="/images/sydney.mp4" width="32.5%" autoplay loop></video>
 <video src="/images/apostles.mp4" width="32.5%" autoplay loop></video>
