--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -81,9 +81,9 @@ It was a lot of money for all the plane tickets and experiences. My friend Emma 
 
 <table style="width:70%" >
   <tr>
-    <th>Expense</th>
-    <th align="center">Cost</th> 
-    <th align="center">Could have saved?</th>
+    <td>Expense</td>
+    <td align="center">Cost</td> 
+    <td align="center">Could have saved?</td>
   </tr>
   <tr>
     <td>5 Flights</td>
