more small changes

--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -33,7 +33,7 @@ Sydney
 <img src='/images/opera_1.jpg' width="29.3%">
 <img src='/images/chinese_garden.jpg' width="22%">
 <img src='/images/graffiti.jpg' width="22%">
-The Sydney Opera House.
+The Sydney Opera House, left and left middle; Chinese Garden of Friendship, right middle; Newtown graffiti, right.
 
 Melbourne & Great Ocean Road
 ------
