finalize blog post

--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -138,7 +138,9 @@ It was a lot of money for all the plane tickets and experiences. My friend Emma 
 </table>
 </center>
 
-Video footage of the trip can be found here. What a journey. 
+Video footage of the trip can be found [here](https://www.youtube.com/watch?v=npkHCBqyLyg). All the pictures from the trip can be found [here](https://www.facebook.com/Jason.F.Wei/media_set?set=a.2292517547444410.1073741838.100000585611780&type=3).
+
+What a journey. 
 
 <video src="/images/sydney.mp4" width="32.5%" autoplay loop></video>
 <video src="/images/apostles.mp4" width="32.5%" autoplay loop></video>
