--- a/_posts/2018-06-17-blog-post-5.md
+++ b/_posts/2018-06-17-blog-post-5.md
@@ -142,9 +142,9 @@ Video footage of the trip can be found [here](https://www.youtube.com/watch?v=np
 
 What a journey. 
 
-<video src="/images/sydney.mp4" width="32.5%" autoplay loop></video>
-<video src="/images/apostles.mp4" width="32.5%" autoplay loop></video>
-<video src="/images/mount_vic_video.mp4" width="32.5%" autoplay loop></video>
+<video src="/images/sydney.mp4" width="32.5%" autoplay loop muted></video>
+<video src="/images/apostles.mp4" width="32.5%" autoplay loop muted></video>
+<video src="/images/mount_vic_video.mp4" width="32.5%" autoplay loop muted></video>
 Sydney, left; 12 apostles, middle; view from Mount Victoria, right.
 
 
