--- a/_posts/2018-06-08-blog-post-4.md
+++ b/_posts/2018-06-08-blog-post-4.md
@@ -25,9 +25,9 @@ I had a couple of observations from working at Oracle. The first is that my prog
 Activities
 ------
 
-**Protago Labs:** I continued working part-time for [Protago Labs](http://protagolab.com/), a small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
+**Protago Labs:** I continued working part-time for Protago Labs, a small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
 
-**Research:** Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the organizer of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
+**Research:** Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma biopsy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the organizer of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
 When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more difficult to find doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, it was at times challenging that my research timeline was so dependent on waiting for our pathologists to label our data.
 
